--- a/index.html
+++ b/index.html
@@ -470,14 +470,14 @@
     <div class="section-box" data-aos="fade-up" data-aos-delay="100">
         <h3 id="work-experience">Work Experience</h3>
         <div class="section-content skills-content">
-            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="200"><p>2023-Present</p><p>Handover Document Controller</p><p>VA Tech Wabag Ltd</p></div>
-            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="300"><p>2023</p><p>Document Controller</p><p>KEO International Consultants</p></div>
-            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="400"><p>2023</p><p>Document Controller</p><p>China Railway Construction Coporation</p></div>
-            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="500"><p>2021-2022</p><p>Document Controller</p><p>Continental Mercantile Coporation</p></div>
-            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="600"><p>2012-2020</p><p>Document Controller</p><p>QBS International WLL</p></div>
-            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="700"><p>2008-2012</p><p>Document Controller</p><p>Baytur Construction & Contracting Comapany</p></div>
-            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="800"><p>2004-2008</p><p>Administrative Executive</p><p>Kamlesh Plastics</p></div>
-            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="900"><p>2002-2003</p><p>Administrative Executive</p><p>A&B Toolers</p></div>
+            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="200"><p>2023-Present</p><p>Handover Document Controller</p><p>VA Tech Wabag Ltd</p><p>Doha, Qatar</p></div>
+            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="300"><p>2023</p><p>Document Controller</p><p>KEO International Consultants</p><p>Doha, Qatar</p></div>
+            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="400"><p>2023</p><p>Document Controller</p><p>China Railway Construction Coporation</p><p>Doha, Qatar</p></div>
+            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="500"><p>2021-2022</p><p>Document Controller</p><p>Continental Mercantile Coporation</p><p>Cochin, India</p></div>
+            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="600"><p>2012-2020</p><p>Document Controller</p><p>QBS International WLL</p><p>Doha, Qatar</p></div>
+            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="700"><p>2008-2012</p><p>Document Controller</p><p>Baytur Construction & Contracting Comapany</p><p>Doha, Qatar</p></div>
+            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="800"><p>2004-2008</p><p>Administrative Executive</p><p>Kamlesh Plastics</p><p>Mumbai, India</p></div>
+            <div class="work-experience-box" data-aos="fade-up" data-aos-delay="900"><p>2002-2003</p><p>Administrative Executive</p><p>A&B Toolers</p><p>Cochin, India</p></div>
         </div>
     </div>
 
