--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
     <div id="cover-page">
         <h1 data-aos="zoom-in" data-aos-delay="200">Kishor Sankaran</h1>
         <p data-aos="zoom-in" data-aos-delay="400">Document Management Expert</p>
-        <p class="enter-text" data-aos="fade-up" data-aos-delay="800">Click anywhere to enter</p>
+        <p class="enter-text" data-aos="fade-up" data-aos-delay="800">Explore Portfolio</p>
     </div>
 
     <div id="main-content" style="display: none;">
