--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
             <div class="profile-column">
                 <h2>About me</h2>
                 <p>
-                    I am Kishor Sankaran, hailing from Kerala, India. Currently stationed in Doha, Qatar, I bring forth over 12 years of invaluable expertise as a Document Management Expert. My journey has been marked by honing skills in optimizing information systems, primarily in Qatar. This experience has sculpted me professionally and allowed me to contribute effectively to the field.
+                    I am Kishor Sankaran, hailing from Kerala, India. Currently stationed in Doha, Qatar, I bring forth over 12 years of invaluable expertise as a Document Management Expert. My journey has been marked by honing skills in optimizing information systems, primarily in Qatar. This experience, along with my passion for learning new technologies like AI tools, has sculpted me professionally and allowed me to contribute effectively to the field.
                 </p>
             </div>
             <div class="profile-column">
