--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
             align-items: center;
             cursor: pointer;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-            z-index: 1001; /* Above the chat container */
+            z-index: 10000; /* Increased z-index to ensure visibility on cover page */
             transition: transform 0.2s ease-in-out;
         }
 
