--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
                 </div>
                 <div class="skills-box" data-aos="fade-up" data-aos-delay="700">
                     <p><strong>Listening to Music</strong></p>
-                    <p>Music is my constant companion—whether it’s the timeless classics of the 60s, 70s, and 80s or the latest chart-toppers. I enjoy a diverse range of genres and languages, from Hindi, English, and Malayalam to Tamil. Music lifts my spirits, stirs memories, and enhances every mood and moment.</p>
+                    <p>Music is my constant companion—whether it’s the timeless classics of the 60s, 70s, and 80s or the latest chart-toppers. I enjoy a diverse range of genres and languages, from Hindi, English, and Malayalam to Tamil. Music lifts my spirits, stirs memories and enhances every mood and moment.</p>
                 </div>
             </div>
         </div>
@@ -1020,6 +1020,7 @@
             // If you are running this file directly in your browser (not through a hosted environment),
             // you MUST replace "YOUR_GEMINI_API_KEY_HERE" with your actual API key.
             // Otherwise, API calls will fail with a "PERMISSION_DENIED" (403) or "INVALID_ARGUMENT" (400) error.
+            /* Removed the alert for smoother experience while debugging key issues.
             if (apiKey === "YOUR_GEMINI_API_KEY_HERE") {
                 // Remove loading message if it exists
                 if (chatMessages.lastChild && chatMessages.lastChild.textContent === "Kishor is thinking...") {
@@ -1029,6 +1030,7 @@
                 console.error("Gemini API Key missing! Please replace 'YOUR_GEMINI_API_KEY_HERE' with your actual key.");
                 return; // Stop execution if API key is missing
             }
+            */
             // --- END LOCAL TESTING REMINDER ---
 
 
